deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: production-demo
  namespace: production-demo

spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: production-demo

  template:
    metadata:
      labels:
        app: production-demo

    spec:
      containers:
        - name: production-demo
          image: khanhyder4/k8s-production-demo:v1
          imagePullPolicy: Always

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "128Mi"

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
