service.yaml
apiVersion: v1
kind: Service
metadata:
  name: production-demo-service
  namespace: production-demo
spec:
  type: NodePort

  selector:
    app: production-demo

  ports:
    - port: 80
      targetPort: 80
      nodePort: 30081
