ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: production-demo-ingress
  namespace: production-demo

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: production-demo-service
                port:
                  number: 80
